Added composer scripts.

--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,13 @@
         "phpunit/phpunit": "^10.5",
         "phpstan/phpstan": "^1.12",
         "friendsofphp/php-cs-fixer": "^3.64"
+    },
+    "scripts": {
+        "test": [
+            "vendor/bin/phpunit tests --colors=always"
+        ],
+        "analyze": [
+            "vendor/bin/phpstan analyse src tests --level 9"
+        ]
     }
 }
