--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
         "phpstan/phpstan": "^1.12",
         "friendsofphp/php-cs-fixer": "^3.64"
     },
+    "require": {
+        "php": ">=8.1.0"
+    },
     "scripts": {
         "test": [
             "vendor/bin/phpunit tests --colors=always"
